# spandsp-rs

./: .gitmodules  Cargo.toml  README.md  release.toml
spandsp/: Cargo.toml  README.md
spandsp-sys/: Cargo.toml  README.md  build.rs  wrapper.h
spandsp/src/: dtmf.rs  echo.rs  error.rs  fax.rs  fax_modems.rs  g711.rs  g722.rs  g726.rs  hdlc.rs  lib.rs  logging.rs  power_meter.rs  t30.rs  t38_core.rs  t38_gateway.rs  t38_terminal.rs  t4.rs  t4_rx.rs  t4_tx.rs  tone_detect.rs  tone_generate.rs
spandsp/tests/: integration.rs
