[package]
name = "spandsp-sys"
version = "0.1.4"
edition = "2024"
links = "spandsp"
license = "MIT"
keywords = ["telephony", "dsp", "fax", "ffi", "spandsp"]
categories = ["external-ffi-bindings", "multimedia::audio"]
description = "Raw FFI bindings for the spandsp telephony DSP library"
repository = "https://github.com/coral/spandsp-rs"

exclude = [
    "vendor/test-data/",
    "vendor/tests/",
    "vendor/doc/",
    "vendor/debian/",
    "vendor/m4/",
    "vendor/spandsp-sim/",
    "vendor/win/",
    "vendor/config/",
    "vendor/src/msvc/",
    "vendor/.github/",
    "vendor/*.sh",
    "vendor/*.spec",
    "vendor/*.ac",
    "vendor/*.am",
]

[build-dependencies]
cc = "1"
bindgen = "0.72"
pkg-config = "0.3"

[features]
default = ["fax"]
fax = []
v32bis = []
v34 = []
ssl-fax = ["fax"]
