[package]
name = "spandsp"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["telephony", "dsp", "fax", "codec", "dtmf"]
categories = ["api-bindings", "multimedia::audio"]
description = "Safe Rust wrappers for the spandsp telephony DSP library"
repository = "https://github.com/coral/spandsp-rs"

[dependencies]
spandsp-sys = { version = "0.1.0" }
bitflags = "2"
thiserror = "2"

[features]
default = ["fax"]
fax = ["spandsp-sys/fax"]
v32bis = ["spandsp-sys/v32bis"]
v34 = ["spandsp-sys/v34"]
ssl-fax = ["spandsp-sys/ssl-fax"]
